Util code disussion

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,4 @@
 port= 80000
-MONGODB_URI = mongodb+srv://shubhamnirmal:<db_password>@cluster0.9ljyf0e.mongodb.net
+MONGODB_URI = mongodb+srv://shubhamnirmal:<db_password>@cluster0.9ljyf0e.mongodb.net 
+
+CORS_ORIGIN=*
