--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,15 @@ port= 80000
 MONGODB_URI = mongodb+srv://shubhamnirmal:<db_password>@cluster0.9ljyf0e.mongodb.net 
 
 CORS_ORIGIN=*
+
+ACCESS_TOKEN_SECRET = chai-aur-code 
+
+ACCESS_TOKEN_EXPIRY = 1d 
+REFRESH_TOKEN_SECRET = chai-aur-backend
+REFRESH_TOKEN_EXPIRY = 10d
+
+
+
+CLOUDINARY_CLOUD_NAME = dtjxkobvy
+CLOUDINARY_API_KEY = 562397249524339
+CLOUDINARY_API_SECRET= **********
